--- a/example.env
+++ b/example.env
@@ -1,4 +1,4 @@
-BOT_TOKEN=5923559507:AAH6YS5JIyt4S4ZUaACS6UsQEaoQkv3gYvg
+BOT_TOKEN=5923559507:AAH6YS5JIyt4S4ZUaACS6UsQEaoQkv3gYvg (EXAMPLE TOKEN)
 RABBITMQ_PORT=5672
 RABBITMQ_USER=admin
 RABBITMQ_PASSWORD=password
